--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left:0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: rgba(0,0,0,0.5);
     z-index: 5;
@@ -20,7 +20,7 @@
     .highlight-modal, .comment-modal, .download-modal {
         display: none;
         position: absolute;
-        width: 80%;
+        width: 100%;
         height: 80%;
         padding: 1rem;
     }
@@ -129,5 +129,16 @@
         @include btn;
         padding: 0.5rem 3rem;
         margin: 1rem;
+    }
+}
+
+
+@media all and (min-width: 600px) {
+    .highlight-modal, .comment-modal, .download-modal {
+        display: none;
+        position: absolute;
+        width: 80%;
+        height: 80%;
+        padding: 1rem;
     }
 }
