--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -118,7 +118,7 @@
 
 // bottom toolbar
 	.bottom-toolbar-wrapper {
-		display: none;
+		display: flex;
 		transition: 0.3s;
 		position: fixed;
 		width: 100%;
@@ -137,7 +137,7 @@
 		width: 100%;
 		max-width: 1024px;
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 		align-items: center;
 	}
 	.tools {
@@ -148,7 +148,7 @@
 		align-items: center;
 		i {
 			padding: 0 10px;
-			margin-right: 30px;
+			margin-right: 15px;
 			transition:transform .3s ease-in-out;
 		&:hover{
 			cursor: pointer;
@@ -159,6 +159,7 @@
 		}
 	}
 	.next-story {
+		display: none;
 		border-left: solid 1px $color__blue;
 		padding: 0 20px;
 		font-family: $font__header;
@@ -178,7 +179,7 @@
 	}
 	.bottom-toolbar-wrapper-slide-up {
 		transition: 0.5s;
-		bottom: 50px;
+		bottom: 0px;
 	}
 
 // comment section
@@ -213,6 +214,14 @@
 
 
 // breakpoints
+@media all and (min-width: 550px) {
+	.next-story {
+		display: block;
+	}
+	.bottom-toolbar {
+		justify-content: space-between;
+	}
+}
 
 @media all and (min-width: 600px) {
 
@@ -290,6 +299,13 @@
 	}
 	.bottom-toolbar-wrapper {
 		display: flex;
+		.tools i {
+			margin-right: 30px;
+		}
+	}
+	.bottom-toolbar-wrapper-slide-up {
+		transition: 0.5s;
+		bottom: 50px;
 	}
 
 
