--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -16,14 +16,14 @@
     justify-content: center;
     align-items: center;
     position: relative;
+}
 
-    .highlight-modal, .comment-modal, .download-modal {
-        display: none;
-        position: absolute;
-        width: 100%;
-        height: 80%;
-        padding: 1rem;
-    }
+.highlight-modal, .comment-modal, .download-modal {
+    display: none;
+    position: absolute;
+    width: 95%;
+    height: 80%;
+    padding: 1rem;
 }
 
 .highlight-modal {
@@ -65,6 +65,7 @@
           @include btn;
           padding: 0.5rem 3rem;
           margin: 1rem;
+          cursor: pointer;
         }
     }
 
@@ -135,10 +136,6 @@
 
 @media all and (min-width: 600px) {
     .highlight-modal, .comment-modal, .download-modal {
-        display: none;
-        position: absolute;
         width: 80%;
-        height: 80%;
-        padding: 1rem;
     }
 }
