modal tool bar styling

--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -274,6 +274,7 @@ h3 {
 			position: relative;
 			background: url(../../images/about-bix-bickson.jpg);
 			background-size: cover;
+			height: 550px;
 			img {
 				display: block;
 			}
