fix merge conflict with old front modal scss

--- a/themes/bix/sass/front-sections/_front-model.scss
+++ b/themes/bix/sass/front-sections/_front-model.scss
@@ -1,137 +1,6 @@
 
-/*====================================
-  Our Modal Window styles
-=====================================*/
-.modal {
-  text-transform: capitalize;
-  background: #fff;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
-  display: inline-block;
-  padding: 1em;
-  box-shadow: none;
-  text-shadow: none;
-}
-
-.modal > label {
-  background: #F9AC31;
-  border: 1px solid #f0c600;
-  border-radius: .2em;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: bold;
-  padding: 0.75em 1.5em;
-  //text-shadow: 1px 1px 1px #fff;
-  transition: all 0.55s;
-}
-.modal > label:hover {
-  transform: scale(0.97);
-}
-.modal__overlay {
-  background: #F9AC31;
-  bottom: 0;
-  left: 0;
-  position: fixed;
-  right: 0;
-  text-align: center;
-  text-shadow: none;
-  top: 0;
-  z-index: 600;
-}
-
-.modal__wrap {
-  position: relative;
-  margin: 20px auto;
-  max-width: 500px;
-  width: 90%;
-}
-
-
-.modal__wrap label {
-  background: #F9AC31;
-  border-radius: 50%;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  height: 1.5em;
-  line-height: 1.5;
-  position: absolute;
-  right: .5em;
-  top: .5em;
-  width: 1.5em;
-}
-.modal__wrap h2 {
-  text-transform: capitalize;
-  line-height: 50px;
-  color: white;
-  border-top: 2px solid white;
-  border-bottom: 2px solid white;
-  text-transform: uppercase;
-}
-.modal__wrap-h5 {
-  text-transform: capitalize;
-  color: #FFFFFF;
-  text-align: center;
-}
-.modal input:focus ~ label {
-  transform: scale(0.97);
-}
-
-.model input {
-  display: none;
-  position: absolute;
-  top: -1000px;
-}
-
-.modal__overlay {
-  opacity: 0;
-  transform: scale(0.5);
-  transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  z-index: -100;
-}
-
-.modal input:checked ~ .modal__overlay {
-  opacity: 1;
-  transform: scale(1);
-  z-index: 800;
-}
-
-.modal__trigger {
-    // position: absolute;
-    // top: -1000px;
-    display: none;
-}
-
-
-.email-unlock {
-    width: 100%;
-    height: 11vh;
-}
-
-#modal-button {
-  margin-top: 50%;
-  margin-right: 23%;
-  color: #fff;
-  text-decoration: none;
-  border: solid #fff 2px;
-  border-radius: 30px;
-  background-color: #70b3cb;
-  font-weight: 500;
-  font-size: 1.1rem;
-  box-shadow: none;
-  text-shadow: none;
-  width: 50%;
-}
-
-#modal-button:hover{
-  text-shadow: none;
-  box-shadow: none;
-  background-color: #ffffff;
-  border: solid #70b3cb 2px;
-  color: #70b3cb;
-}
-
-
-.blue-books {
-  color:#70b3cb;
+.dd-modal {
+background-color: $color__orange;
+text-align: center;
+display: none;
 }
