style thankyou and dd modal

--- a/themes/bix/sass/front-sections/_front-model.scss
+++ b/themes/bix/sass/front-sections/_front-model.scss
@@ -28,7 +28,15 @@ display: none;
     }
 
     .close {
-      
+
+    }
+
+    .dd-button {
+      @include btn;
+      padding: 0.5rem 3rem;
+      margin: 1rem;
+      cursor: pointer;
     }
  }
+
 }
